--- a/index.html
+++ b/index.html
@@ -128,18 +128,18 @@
 
     function showModal() {
             const images = {
-                4: 'lucky-star-sticker.gif',
-                2: 'p350-Skull.gif',
-                5: 'G22-StarFall.gif', 
-                7: 'AKR12-Carbon.gif',
-                6: 'FnFal-Tactical.gif',
-                14: 'm4-lizard.gif',
-                1: 'P90-Pilot.gif',
-                15: 'Sticker-Nice-Skill.gif',
-                9: 'Sticker-Safety-First.gif',
-                10: 'Fragment-Legendary.gif',
-                19: 'Tec-9-Fable.gif',
-                3: 'Graffiti-Oasis.gif'
+                4: 'гифки выпадения/lucky-star-sticker.gif',
+                2: 'гифки выпадения/p350-Skull.gif',
+                5: 'гифки выпадения/G22-StarFall.gif', 
+                7: 'гифки выпадения/AKR12-Carbon.gif',
+                6: 'гифки выпадения/FnFal-Tactical.gif',
+                14: 'гифки выпадения/m4-lizard.gif',
+                1: 'гифки выпадения/P90-Pilot.gif',
+                15: 'гифки выпадения/Sticker-Nice-Skill.gif',
+                9: 'гифки выпадения/Sticker-Safety-First.gif',
+                10: 'гифки выпадения/Fragment-Legendary.gif',
+                19: 'гифки выпадения/Tec-9-Fable.gif',
+                3: 'гифки выпадения/Graffiti-Oasis.gif'
             };
 
             // Устанавливаем изображение в зависимости от значения cash
